# mov_to_mp4_batch_gui

./: .gitignore  LICENSE  README.md  build_exe_windows.cmd  cli.py  main.py  media_converter.spec  pyproject.toml  requirements-dev.txt  requirements.txt  run_windows.cmd
app/: constants.py  dependency_bootstrap.py  device_profiles.py  localization.py  models.py  paths.py  performance_profiles.py  presets.py  settings.py
assets/: portable.ini
config/: constants.py  paths.py
core/: localization.py  models.py  performance_profiles.py  presets.py  settings.py
scripts/: build_pyinstaller.py  find_ffmpeg.py  python_bootstrap.ps1
services/: batch_workflow_service.py  cloud_upload_service.py  conversion_runner.py  converter_service.py  ffmpeg_auto_installer.py  ffmpeg_service.py  folder_scanner.py  hardware_service.py  history_store.py  license_service.py  media_analysis_service.py  media_preview_service.py  notification_service.py  paid_update_service.py  preset_manager.py  preview_builder.py  queue_manager.py  report_service.py  secret_store.py  security_service.py  settings_manager.py  shortcut_manager.py  smart_convert_service.py  system_tray_service.py  text_conversion_service.py  theme_manager.py  transcription_service.py  url_security.py  validation_service.py  watch_service.py  youtube_download_service.py
tauri_app/: README_TAURI.md  index.html  package-lock.json  package.json
tauri_app/src-tauri/: Cargo.toml  tauri.conf.json
tauri_app/src-tauri/src/: main.rs
tests/: test_batch_workflow_service.py  test_cli.py  test_converter_service.py  test_dependency_bootstrap.py  test_error_classifier.py  test_ffmpeg_auto_installer.py  test_ffmpeg_service.py  test_hardware_service.py  test_i18n.py  (+15 more)
ui/: app.py  (+5 more)
(+110 files in other folders)
