[project]
name = "media-converter"
version = "1.0.0"
requires-python = ">=3.12"
description = "Desktop batch converter for video, photos, audio, subtitles, and text files."
license = {text = "MIT"}

[tool.ruff]
target-version = "py312"
line-length = 140
src = ["app", "services", "ui", "utils", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary operator (reduces readability)
    "UP007",  # use X | Y for unions (keep Optional for 3.12 compat)
    "RUF001", # localized Cyrillic user-facing strings
    "RUF012", # mutable class attributes (dataclass fields)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "services", "ui", "utils"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
